changing town to villager name

--- a/llm/prompts/templates/partials/private_info/villager.jinja2
+++ b/llm/prompts/templates/partials/private_info/villager.jinja2
@@ -1,6 +1,6 @@
 === YOUR PRIVATE INFORMATION ===
 
-You are {{ player_name }}, TOWN (no special abilities).
+You are {{ player_name }}, VILLAGER (no special abilities).
 
 {% include 'partials/private_info/scratchpad.jinja2' %}
 
