adding special human trashtalk phase

--- a/templates/game.html
+++ b/templates/game.html
@@ -31,6 +31,13 @@
                         <span id="interrupt-status"></span>
                     </div>
 
+                    <!-- Trashtalk Controls (shown during postgame trashtalk) -->
+                    <div id="trashtalk-control" style="display: none;">
+                        <button id="trashtalk-interrupt-btn" class="btn-interrupt">I Want to Speak</button>
+                        <button id="end-trashtalk-btn" class="btn-secondary">End Trashtalk</button>
+                        <span id="trashtalk-status"></span>
+                    </div>
+
                     <!-- Discussion Input -->
                     <div id="discussion-input" style="display: none;">
                         <h4>Your Turn to Speak</h4>
