--- a/llm/prompts/templates/postgame/trashtalk_poll.jinja2
+++ b/llm/prompts/templates/postgame/trashtalk_poll.jinja2
@@ -5,6 +5,8 @@
 {{ private_info }}
 
 The game is over. {{ winner }} wins!
+All winners go to heaven, even the dead.
+All losers go to hell, even the living.
 
 ROLE REVEAL:
 {% for p in all_players %}
